# humidity-sensor

./: .gitignore  README.md  history.txt
.github/workflows/: backend.yml  build-pico.yml  frontend.yml  lint-build-pico.yml  lint-build-pico.yml.bak
embedded/: README.md
embedded/src/: CMakeLists.txt  config.h  main.c
embedded/src/core1/: core1.c  core1.h
embedded/src/data_flow/: data_flow.h
embedded/src/hardware/: dht20_sensor.c  dht20_sensor.h  lcd_i2c.c  lcd_i2c.h  led_array.h  photores.c  photores.h
embedded/src/ui/: lcd_screens.c  lcd_screens.h  led_ui.c  led_ui.h
mock/: mock_ui.c  mock_ui.h
src/: CMakeLists.txt  config.h  main.c
src/core1/: core1.c  core1.h
src/data_flow/: data_flow.h
src/hardware/: buttons.c  buttons.h  dht20_sensor.c  dht20_sensor.h  lcd.c  lcd.h  led_array.c  led_array.h  photores.c
src/ui/: lcd_ui.c  lcd_ui.h
web/backend/: package-lock.json  package.json  tsconfig.json
web/backend/src/: server.ts
web/frontend/: README.md
web/frontend/src/: App.tsx
